--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
-.App {
+:root {
+  --mainDark: #343a40;
+  --mainGrey: rgba(109,109,109);
+  --mainLightGrey: rgba(172,172,172);
+  --mainWhite:#fff;
+  --mainBlue:#007bff;
+  
+}
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -40,4 +52,4 @@
 .container-wrapper{
 background-color: white;
 }
-
+ */
