reviewsCard and reviews Component

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://s2.r29static.com/bin/entry/69a/x,80/1302994/unnamed.jpg");
+  /* background-image: url("https://s2.r29static.com/bin/entry/69a/x,80/1302994/unnamed.jpg"); */
   background-repeat: repeat;
   background-position: right;
 }
